# stm32mp1-rust-demo

./: .gitignore  Cargo.toml  build.rs  stm32mp1_mcu.ld
.cargo/: config
src/: main.rs
